syntax = "proto3";

package fy.jobs.v1;

import "google/protobuf/timestamp.proto";

option go_package = "pkg.fy.science/proto/jobs/v1;pbjobsv1";

message Job {
  string title = 1;
  string description = 2;
  string url = 3;
  string company_id = 4;
  string location = 5;
  google.protobuf.Timestamp posted_at = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message SponsoredJob {
  string job_id = 1;
  string title = 2;
  string description = 3;
  string body = 4;
  string location = 5;
  string ral_range = 6;
  string remote_type = 7;
  string application_link = 8;

  string company_name = 9;
  string company_logo = 10;
  string company_website = 11;

  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
  google.protobuf.Timestamp public_start_date = 14;
  google.protobuf.Timestamp public_end_date = 15;
  bool draft = 18;
}